@@ -1,0 +1,7 @@
+[xdmcp]
+enabled=true
+port=9999
+
+[test-greeter-config]
+username=alice
+password=password
