@@ -1,0 +1,38 @@
+RUNNER DAEMON-START
+*WAIT 1
+
+# Start an X server to log in with XDMCP
+*START-XSERVER ARGS=":98 -query localhost -port 9999"
+XSERVER :98 START
+XSERVER :98 SEND-QUERY
+
+# Negotiate with daemon
+XSERVER :98 GOT-WILLING AUTHENTICATION-NAME="" HOSTNAME="" STATUS=""
+XSERVER :98 SEND-REQUEST DISPLAY-NUMBER=98 AUTHORIZATION-NAME="MIT-MAGIC-COOKIE-1" MFID="TEST XSERVER"
+XSERVER :98 GOT-ACCEPT SESSION-ID=[0-9]* AUTHENTICATION-NAME="" AUTHORIZATION-NAME=""
+XSERVER :98 SEND-MANAGE SESSION-ID=[0-9]* DISPLAY-NUMBER=98 DISPLAY-CLASS="DISPLAY CLASS"
+XSERVER :98 ACCEPT-CONNECT
+
+# A greeter should start and connect to this X server
+GREETER START
+XSERVER :98 ACCEPT-CONNECT
+GREETER CONNECT-XSERVER 127.0.0.1:98
+GREETER CONNECT-TO-DAEMON
+GREETER CONNECTED-TO-DAEMON
+
+# User logs in
+GREETER LOGIN USERNAME=alice
+GREETER SHOW-PROMPT TEXT="Password:"
+GREETER RESPOND TEXT="password"
+GREETER AUTHENTICATION-COMPLETE AUTHENTICATED=TRUE
+GREETER QUIT
+
+# Session starts
+SESSION START USER=alice
+XSERVER :98 ACCEPT-CONNECT
+SESSION CONNECT-XSERVER
+
+# Clean up
+*STOP-DAEMON
+SESSION TERMINATE SIGNAL=15
+RUNNER DAEMON-EXIT STATUS=0
