@@ -1,6 +1,7 @@
 Overview of changes in lightdm 0.4.4
 
     * Fix failure to accept XDMCP connections due to invalid assert
+    * Added XDMCP regression tests
 
 Overview of changes in lightdm 0.4.3
 
